--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.1.2",
     "sonner": "^2.0.7",
